# ChangeLog for gnome-base/gnome-desktop
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.215 2008/04/09 21:53:55 eva Exp $

*gnome-desktop-2.22.1 (09 Apr 2008)

  09 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-desktop-2.22.1.ebuild:
  bump to 2.22.1. Mostly translation updates.

*gnome-desktop-2.22.0 (23 Mar 2008)

  23 Mar 2008; Rémi Cardona <remi@gentoo.org> +gnome-desktop-2.22.0.ebuild:
  New version for GNOME-2.22. Adds a new GnomeBG background-changing API,
  port to GIO, various cleanups

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> gnome-desktop-2.20.3.ebuild:
  Stable for HPPA (bug #208366).

  03 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  gnome-desktop-2.20.3.ebuild:
  alpha/ia64/sparc stable wrt #208366

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  gnome-desktop-2.20.3.ebuild:
  Stable on amd64 wrt bug #208366.

  01 Feb 2008; Brent Baude <ranger@gentoo.org> gnome-desktop-2.20.3.ebuild:
  Marking gnome-desktop-2.20.3 ppc64 and ppc stable for bug 208366

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  gnome-desktop-2.20.3.ebuild:
  stable x86, bug 208366

*gnome-desktop-2.20.3 (09 Jan 2008)

  09 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-desktop-2.20.3.ebuild:
  bump to 2.20.3

*gnome-desktop-2.20.2 (29 Nov 2007)

  29 Nov 2007; Mart Raudsepp <leio@gentoo.org> -gnome-desktop-2.20.0.ebuild,
  +gnome-desktop-2.20.2.ebuild:
  Version bump with only translation updates

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> gnome-desktop-2.20.1.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org>
  gnome-desktop-2.20.1.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> gnome-desktop-2.20.1.ebuild:
  Marking gnome-desktop-2.20.1 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  gnome-desktop-2.20.1.ebuild: